# minimal-qml6-examples

./: CMakeLists.txt  README.md  REUSE.toml
.github/workflows/: build-with-qt6.yml  cmake-single-platform.yml  install-qt6.yml
qml5-contextproperty/: CMakeLists.txt  Main.qml  MyFunctionsFromCPPToQml.hpp  MyFunctionsFromCppToQml.hpp  README.md  main.cpp
qml5-portaldialog/: CMakeLists.txt  NOTES.md  README.md  main.cpp  main.qml  org.kde.qml5-portaldialog.json  qmlfile.qrc
qml5-singletoninstance/: CMakeLists.txt  Main.qml  README.md  SetDialog.qml  main.cpp  main.qml  singletoninstance.cpp  singletoninstance.hpp
qml5-singletoninstance/qml/: CMakeLists.txt  SetDialog.qml  ViewDialog.qml
qml5-singletontype/: CMakeLists.txt  Main.qml  README.md  SetDialog.qml  main.cpp  singletontype.hpp  singletontypecallback.hpp
qml5-singletontype/qml/: CMakeLists.txt  SetDialog.qml  ViewDialog.qml
qml6-conan/: CMakeLists.txt  README.md  conanfile.txt  main.cpp  main.qml
qml6-contextproperty/: main.qml  readme.md
qml6-multienginesingleton/: README.md  SetDialog.qml  ViewDialog.qml  registersingleton.hpp
qml6-portaldialog/: CMakeLists.txt  NOTES.md  README.md  main.cpp  main.qml  org.kde.qml6-portaldialog.json
qml6-pragmasingleton/: CMakeLists.txt  Main.qml  README.md  SetDialog.qml  ViewDialog.qml  main.cpp  main.qml  readme.md
qml6-pragmasingleton/qml/: CMakeLists.txt  PragmaSingleton.qml  SetDialog.qml  ViewDialog.qml
qml6-qmlelement/: CMakeLists.txt  Main.qml  NamedCppQml.hpp  NormalCppQml.hpp  README.md  main.cpp  main.qml
qml6-qmlelement/qml/: CMakeLists.txt  CppQml.hpp
qml6-registersingleton/: CMakeLists.txt  SetDialog.qml  ViewDialog.qml  main.cpp  main.qml  readme.md  registersingleton.cpp  registersingleton.hpp
qml6-singleton/: CMakeLists.txt  Main.qml  README.md  SetDialog.qml  ViewDialog.qml  main.cpp  main.qml  singleton.cpp  singleton.hpp
qml6-singleton/qml/: CMakeLists.txt  SetDialog.qml  ViewDialog.qml
qml6-subdirectories/: CMakeLists.txt  README.md  main.cpp
qml6-subdirectories/sub1/: CMakeLists.txt  Main.qml  main.qml
qml6-subdirectories/sub1/sub2/: CMakeLists.txt  TextRow.qml
qml6-subdirectories/sub1/sub2/sub3/: CMakeLists.txt  strings.hpp
